--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/three": "^0.182.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
-    "next": "15.1.6",
+    "next": "^16.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "three": "^0.182.0"
